@@ -1,6 +1,7 @@
 
-Drupal 6.28-dev, xxxx-xx-xx (development release)
+Drupal 6.28, 2013-01-16
 ----------------------
+- Fixed security issues (multiple vulnerabilities), see SA-CORE-2013-001.
 
 Drupal 6.27, 2012-12-19
 ----------------------
